# kebab-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  migrate_and_generate.sh
.github/: CODEOWNERS
.github/workflows/: deploy.yml
migration/: README.md
migration/src/: lib.rs  m20250611_142906_create_board_data_table.rs  m20250612_035646_create_vote.rs
src/: main.rs
src/commands/: basic.rs  board.rs  mod.rs  vote.rs
src/entities/: board_data.rs  mod.rs  prelude.rs  vote.rs
src/services/: board_service.rs  board_ui_service.rs  chart_service.rs  mod.rs  vote_service.rs
