[package]
name = "kebab-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
poise = {git = "https://github.com/serenity-rs/poise.git"}
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
migration = { path = "./migration" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
plotters = "0.3"
plotters-bitmap = "0.3"